force-app/main/default/objects/Linked_document_column__mdt/Linked_document_column__mdt.object-meta.xml
<CustomObject>
    <label>Linked document column</label>
    <pluralLabel>Linked document column</pluralLabel>
</CustomObject>