force-app/main/default/objects/Linked_document_column__mdt/fields/Column_settings__c.field-meta.xml
<CustomField>
    <fullName>Column_settings__c</fullName>
    <label>Column settings</label>
    <referenceTo>Column_settings__mdt</referenceTo>
    <relationshipLabel>Linked document column</relationshipLabel>
    <relationshipName>Linked_document_column</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>