force-app/main/default/objects/Linked_document_column__mdt/fields/Field_name__c.field-meta.xml
<CustomField>
    <fullName>Field_name__c</fullName>
    <description>Name that the field has in the corresponding data wrapper (see ApplicationWrapper for example). Not ideal but best for now.</description>
    <inlineHelpText>Name that the field has in the corresponding data wrapper (see ApplicationWrapper for example). Not ideal but best for now.</inlineHelpText>
    <label>Field name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>