force-app/main/default/objects/Linked_document_column__mdt/fields/Filter_on_field__c.field-meta.xml
<CustomField>
    <fullName>Filter_on_field__c</fullName>
    <description>Field to filter on (always a &apos;LIKE&apos; clause)</description>
    <inlineHelpText>Field to filter on (always a &apos;LIKE&apos; clause)</inlineHelpText>
    <label>Filter on field</label>
    <length>180</length>
    <type>Text</type>
</CustomField>