force-app/main/default/objects/Linked_document_column__mdt/fields/Filter_on_pattern__c.field-meta.xml
<CustomField>
    <fullName>Filter_on_pattern__c</fullName>
    <description>Pattern to filter on</description>
    <label>Filter on pattern</label>
    <length>250</length>
    <type>Text</type>
</CustomField>