force-app/main/default/objects/Linked_document_column__mdt/fields/Version_field_name__c.field-meta.xml
<CustomField>
    <fullName>Version_field_name__c</fullName>
    <label>Version field name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>