force-app/main/default/objects/Linked_document_column__mdt/fields/Workcomponent_general_settings__c.field-meta.xml
<CustomField>
    <fullName>Workcomponent_general_settings__c</fullName>
    <label>Workcomponent general settings</label>
    <referenceTo>Workcomponent_general_settings__mdt</referenceTo>
    <relationshipLabel>Linked document column</relationshipLabel>
    <relationshipName>Linked_document_column</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>